# mpm-pre-commit-hooks

./: .pre-commit-hooks.yaml  main.py  pyproject.toml
hooks/: set_var_defaults.py
testing/: util.py
testing/resources/: ExportedAvatar.asset  ExportedAvatar_expected.asset  MouseSensibility.asset  MouseSensibility_expected.asset  MusicVolume.asset  MusicVolume_expected.asset  Name.asset  TEEUUID.asset
tests/: set_var_defaults_test.py
